что то там написал

--- a/JavaScriptCode/index.html
+++ b/JavaScriptCode/index.html
@@ -11,7 +11,14 @@
         </head>
         <body>
            <div id="wrap">
-            
+            <nav>
+                <ul>
+                    <li>Домой</li>
+                    <li>Услуги</li>
+                    <li>Еще что то</li>
+                    <li>и т.д.</li>
+                </ul>
+            </nav>
            </div> 
         </body>
     </html>
