--- a/JavaScriptCode/index.html
+++ b/JavaScriptCode/index.html
@@ -23,6 +23,13 @@
                     <li>и т.д.</li>
                 </ul>
             </nav>
+            <div id="justDiv">
+                <p> Just Div </p>
+            </div>
+            <div id="cssId">
+                <label for="sel" >Селектор</label>
+                
+            </div>
             <div id="output">
                 
             </div>
